--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && node prerender.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -27,9 +27,14 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "express": "^5.2.1",
     "globals": "^16.5.0",
+    "puppeteer": "^24.37.5",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "^7.3.1"
+    "vike": "^0.4.253",
+    "vite": "^7.3.1",
+    "vite-plugin-prerender": "^1.0.8",
+    "vite-ssg-react": "^0.1.8"
   }
 }
